Muokkaa valmista create-react-app-pohjaa sääsovellukselle sopivaksi

--- a/weather-app/public/manifest.json
+++ b/weather-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Sää",
+  "name": "Sää-appi",
   "icons": [
     {
       "src": "favicon.ico",
